--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
         <div class="collapse navbar-collapse justify-content-between py-4 py-lg-0" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
                 <a href="#home" class="nav-item nav-link active">Home</a>
-                <a href="#about" class="nav-item nav-link">About</a>
                 <a href="#project" class="nav-item nav-link">Projects</a>
             </div>
             <div class="navbar-nav me-auto py-0">
@@ -68,17 +67,10 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 py-6 pb-0 pt-lg-0">
                     <br>
-                    <h3 class="text-primary mb-3">I'm</h3>
+                    <h3 class="text-primary mb-3">I am</h3>
                     <h1 class="display-3 mb-3">Garvit Saraf</h1>
                     <h2 class="typed-text-output d-inline"></h2>
                     <div class="typed-text d-none">Python, Google Cloud Platform, Computer Networks, Flutter Apps Developer</div>
-                    <div class="d-flex align-items-center pt-5">
-                        <a href="" class="btn btn-primary py-3 px-4 me-5" target="_blank">Download CV</a>
-                        <a href="https://drive.google.com/file/d/1stHt2wE7QtUB3BZSELgwdAQ2kOMu7nbJ/preview" type="button" class="btn-play" target="_blank">
-                            <!--<span></span>-->
-                    </a>
-                        <h5 class="ms-4 mb-0 d-none d-sm-block">Play Video</h5>
-                    </div>
                 </div>
                 <div class="col-lg-6">
                     <img class="img-fluid" src="img/profile.png" alt="">
@@ -87,43 +79,6 @@
         </div>
     </div>
     <!-- Header End -->
-
-    <!-- About Start -->
-    <div class="container-xxl py-6" id="about">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="d-flex align-items-center mb-5">
-                        <h3 class="lh-base mb-0">Fresher with a strong foundation in core computer science concepts</h3>
-                    </div>
-                    <p class="mb-4">Hello, I'm Garvit Saraf, a third-year student pursuing a Bachelor's degree in Computer Science and Engineering. I have a solid understanding of core programming concepts and am eager to apply my knowledge to real-world projects. My skills include:</p>
-                    <ul class="mb-4">
-                        <li>Data Structures and Algorithms</li>
-                        <li>Python Programming Language</li>
-                        <li>Operating Systems</li>
-                        <li>Object Oriented Programming</li>
-                        <li>Computer Networks</li>
-                    </ul>
-                    <a class="btn btn-primary py-3 px-5 mt-3" href="https://www.linkedin.com/in/garvit-saraf-01b13a22a" target="_blank">Read More</a>
-                </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="row g-3 mb-4">
-                        <div class="col-sm-6">
-                            <img class="img-fluid rounded" src="img/about-1.jpg" alt="Garvit Saraf">
-                        </div>
-                        <div class="col-sm-6">
-                            <img class="img-fluid rounded" src="img/about-2.jpg" alt="Garvit Saraf">
-                        </div>
-                    </div>
-                    <div class="d-flex align-items-center mb-3">
-                        <h5 class="border-end pe-3 me-3 mb-0">Projects Completed</h5>
-                        <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">4</h2>
-                    </div>
-                    <p class="mb-4">Although I'm a fresher, I've already completed 4 projects during my academic journey, showcasing my practical skills and problem-solving abilities.</p>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- About End -->
     <!-- Projects Start -->
@@ -716,11 +671,9 @@
             </div>
             <div class="row g-5">
                 <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="mb-2">Call me:</p>
-                    <h3 class="fw-bold">+91 9760600666</h3>
                     <hr class="w-100">
                     <p class="mb-2">Mail me:</p>
-                    <h3 class="fw-bold">garvitsaraf.roll.32@gmail.com</h3>
+                    <h3 class="fw-bold">garvitsaraf2002@gmail.com</h3>
                     <hr class="w-100">
                     <p class="mb-2">Follow me:</p>
                     <div class="d-flex pt-2">
