--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid bg-light my-6 mt-0" id="home">
+     
+    <div class="container-fluid bg-light my-6 mt-0" id="home" style="background-image: url('img/back_fin.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; padding-top: 100px;">
         <div class="container">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 py-6 pb-0 pt-lg-0">
@@ -71,6 +72,8 @@
                     <h1 class="display-3 mb-3">Garvit Saraf</h1>
                     <h2 class="typed-text-output d-inline"></h2>
                     <div class="typed-text d-none">Python, Google Cloud Platform, Computer Networks, Flutter Apps Developer</div>
+                    <p class="mt-4 mb-4" style="color: #666; font-size: 18px;">Passionate about technology and innovation. Always eager to learn and grow.</p>
+                    <a href="#contact" class="btn btn-primary btn-lg mt-3">Contact Me</a>
                 </div>
                 <div class="col-lg-6">
                     <img class="img-fluid" src="img/profile.png" alt="">
@@ -98,7 +101,7 @@
                         </a>
                     </div>
                     <div class="portfolio-caption text-center">
-                        <h5>An hour wise lecture management system</h5>
+                        <h5>Schedulify</h5>
                     </div>
                 </div>                
                 <div class="col-lg-3 col-md-6 portfolio-item first">
@@ -109,17 +112,17 @@
                         </a>
                     </div>
                     <div class="portfolio-caption text-center">
-                        <h5>E-Commerce platform</h5>
+                        <h5>ShopVibe</h5>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 portfolio-item second">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <a href="https://github.com/Garv-it2002/Risk_analysis" target="_blank">
+                        <a href="https://github.com/Garv-it2002/InfantGlow" target="_blank">
                         <img class="img-fluid" src="img/project-5.jpg" alt="" title="Utilized WHO data to predict birth risks based on maternal age and weight. Also developed a machine learning model to assess child health based on historical data and weight. Technologies used - Python, Numpy, CSV, Object Oriented Programming, Jupyter Notebooks, Pandas, Matplotlib, Flask, HTML and CSS">
                         </a>
                     </div>
                     <div class="portfolio-caption text-center">
-                        <h5>Birth risk and child health prediction using supervised machine learning</h5>
+                        <h5>InfantGlow</h5>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 portfolio-item second">
@@ -129,7 +132,7 @@
                         </a>
                     </div>
                     <div class="portfolio-caption text-center">
-                        <h5>AuroraTrack</h5>
+                        <h5>Cloud Commerce Intelligence</h5>
                     </div>
                 </div>
             </div>
@@ -277,7 +280,7 @@
                                     <p class="mb-4">Worked on analyzing packet capture files using Python packages such as PyShark, Python-pcapng, Scapy, and PyPCAPKit. Conducted deep analysis of packet captures through SPAN (Switched Port Analyzer) to file, focusing on DNX routers. Identified causes of packet drops, including forwarding blackholes, and sent alarms to the network management system via telemetry and protocol buffers.</p>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">May 2024 - Jul 2024</p>
-                                    <h6 class="mb-0">Cisco</h6>
+                                    <h6 class="mb-0">Cisco Systems</h6>
                                 </div>
                             </div>
                             <div class="row gy-5 gx-4">
@@ -695,8 +698,8 @@
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        <span style="color: rgb(18, 20, 29);">Designed By <a href="https://htmlcodex.com" style="color: rgb(18, 20, 29);" target="_blank">HTML Codex</a></span><br>
-                        <span style="color: rgb(18, 20, 29);">Distributed By: <a href="https://themewagon.com" style="color: rgb(18, 20, 29);" target="_blank">ThemeWagon</a></span>
+                        <span style="color: rgb(255, 255, 255);">Designed By <a href="https://htmlcodex.com" style="color: rgb(255, 255, 255);" target="_blank">HTML Codex</a></span><br>
+                        <span style="color: rgb(255, 255, 255);">Distributed By: <a href="https://themewagon.com" style="color: rgb(255, 255, 255);" target="_blank">ThemeWagon</a></span>
                     </div>
                 </div>
             </div>
